--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
+    "esri-leaflet": "^3.0.10",
+    "esri-leaflet-geocoder": "^3.1.3",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
+    "leaflet-control-geocoder": "^2.4.0",
     "moment": "^2.29.4",
     "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-esri-leaflet": "^2.0.1",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.6.0",
