--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
+    "bootstrap-geocoder": "^1.0.0",
     "date-fns": "^2.29.3",
     "esri-leaflet": "^3.0.10",
     "esri-leaflet-geocoder": "^3.1.3",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
+    "leaflet-geosearch": "^3.7.0",
     "moment": "^2.29.4",
     "ol": "^7.1.0",
     "react": "^18.2.0",
