--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "axios": "^1.2.2",
     "bootstrap-geocoder": "^1.0.0",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "esri-leaflet": "^3.0.10",
     "esri-leaflet-geocoder": "^3.1.3",
     "google-map-react": "^2.2.0",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
     "leaflet-geosearch": "^3.7.0",
+    "mapmyindia-react": "^1.0.6",
     "moment": "^2.29.4",
     "ol": "^7.1.0",
     "react": "^18.2.0",
