--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-leaflet": "^4.2.0",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
