--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-esri-leaflet": "^2.0.1",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.2.0",
+    "react-leaflet-geosearch": "^0.3.4",
     "react-router-dom": "^6.6.0",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.6.1",
@@ -40,7 +41,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "proxy": "http://localhost:3000"
+
   },
   "eslintConfig": {
     "extends": [
