--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-esri-leaflet": "^2.0.1",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.2.0",
@@ -43,7 +44,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "proxy": "http://localhost:3000"
-
   },
   "eslintConfig": {
     "extends": [
