--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
 LEAFLET_API_KEY = "AAPK4e5268d5d850408b94a64cbe8466bc4dk5R_BZxaWXqoAnelAqQrdktOZli7YGY2HkwsHit-n532mZiJa4U0-7Q4fg4EZom-"
 REACT_APP_LOCATION_IQ_API_KEY = "pk.a42110b5c004d27c9e2d214f36d0c698"
-REACT_APP_BASEURL = "https://proj-sportflix.onrender.com/api/v1"
-REACT_APP_SOCKET_BASEURL = "https://proj-sportflix.onrender.com"
+REACT_APP_BASEURL = "http://localhost:3000/api/v1"
+REACT_APP_SOCKET_BASEURL = "wss://c83840nki8.execute-api.ap-south-1.amazonaws.com/dev"
