New changes in cicd.yml

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -24,3 +24,5 @@ jobs:
         with:
           name: sportflix-build
           path: build
+      - name: End
+        run: echo ${{ secrets.NEW_SECRET }}
