--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -18,21 +18,33 @@ jobs:
         run: npm run build
         env:
           CI: ""
-          LEAFLET_API_KEY:
-      # Share artifact inside workflow
+          LEAFLET_API_KEY: "${{ secrets.LEAFLET_API_KEY }}"
+          REACT_APP_BASEURL: "${{ secrets.REACT_APP_BASEURL }}"
+          REACT_APP_SOCKET_BASEURL: "${{ secrets.REACT_APP_SOCKET_BASEURL }}"
+          REACT_APP_LOCATION_IQ_API_KEY: "${{ secrets.REACT_APP_LOCATION_IQ_API_KEY }}"
       - name: Share artifact inside workflow
         uses: actions/upload-artifact@v3
         with:
           name: sportflix-build
           path: build
   deploy:
-    runs-on: ubuntu-latest
     needs: build
-    steps:
-      # Download the shared artifact
-      - name: Downloading Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: sportflix-build
-      - name: Display the downloaded files
-        run: ls -R
+    run:
+      runs-on: ubuntu-latest
+      env:
+        AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY }}"
+        AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_KEY }}"
+      steps:
+        - name: Downloading Artifact
+          uses: actions/download-artifact@v3
+          with:
+            name: sportflix-build
+            path: path/to/artifact
+        - name: Push to s3 bucket
+          uses: reggionick/s3-deploy@v4
+          with:
+            folder: path/to/artifact
+            bucket: "${{ secrets.AWS_BUCKET }}"
+            bucket-region: "${{ secrets.AWS_REGION }}"
+            delete-removed: true
+            files-to-include: ".*/*,*/*,**"
