--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,14 +30,18 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    env:
-      AWS_ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY }}"
-      AWS_SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_KEY }}"
     steps:
+      - name: Set AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY}}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
       - name: Downloading Artifact
         uses: actions/download-artifact@v3
         with:
           name: sportflix-build
+          path: sportflix-build
 
       - name: Show files
         run: ls -R
@@ -45,7 +49,7 @@ jobs:
       - name: Push to s3 bucket
         uses: reggionick/s3-deploy@v4
         with:
-          folder: .
+          folder: sportflix-build
           bucket: "${{ secrets.AWS_BUCKET }}"
           bucket-region: "${{ secrets.AWS_REGION }}"
           files-to-include: ".*/*,*/*,**"
