Testing the cicd pipeline by changing the title of the website

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,4 +52,9 @@ jobs:
           folder: sportflix-build
           bucket: "${{ secrets.AWS_BUCKET }}"
           bucket-region: "${{ secrets.AWS_REGION }}"
+          dist-id: ${{ secrets.AWS_CLOUDFRONT_ID }}
+          invalidation: /
+          delete-removed: true
+          no-cache: true
+          private: true
           files-to-include: ".*/*,*/*,**"
