--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,16 +40,17 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: sportflix-build
-          path: sportflix-build
+          path: sportflix_build
 
       - name: Show files
         run: ls -R
 
-      - name: Upload to S3 bucket
-        uses: shallwefootball/s3-upload-action@master
-        id: S3
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws_key_id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws_secret_access_key: ${{ secrets.AWS_SECRET_KEY }}
-          aws_bucket: ${{ secrets.AWS_BUCKET }}
-          source_dir: sportflix-build
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy static site to S3 bucket
+        run: aws s3 sync ./sportflix_build/ s3://${{ secrets.AWS_BUCKET }} --delete
