--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@mui/x-date-pickers": "^5.0.13",
+    "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "jwt-decode": "^3.1.2",
     "leaflet-geosearch": "^3.10.0",
     "mapmyindia-react": "^1.0.6",
     "moment": "^2.29.4",
