Loading bugs fixed in eventList and chatPortal pages

--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 LEAFLET_API_KEY = "AAPK4e5268d5d850408b94a64cbe8466bc4dk5R_BZxaWXqoAnelAqQrdktOZli7YGY2HkwsHit-n532mZiJa4U0-7Q4fg4EZom-"
 REACT_APP_LOCATION_IQ_API_KEY = "pk.a42110b5c004d27c9e2d214f36d0c698"
 REACT_APP_BASEURL = "https://cxmheyemvc.execute-api.ap-south-1.amazonaws.com/api/v1"
-REACT_APP_SOCKET_BASEURL = "wss://c83840nki8.execute-api.ap-south-1.amazonaws.com/dev"
+REACT_APP_SOCKET_BASEURL = "wss://1up7ufmpnd.execute-api.ap-south-1.amazonaws.com/dev"
 REACT_APP_GOOGLE_AUTH_CLIENT_ID = "686948484381-fulne9eoqb4n39sbtu571qdb3840e5qd.apps.googleusercontent.com"
