[Added feature] upload profile pic

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ REACT_APP_LOCATION_IQ_API_KEY = "pk.a42110b5c004d27c9e2d214f36d0c698"
 REACT_APP_BASEURL = "http://localhost:3000/api/v1"
 REACT_APP_SOCKET_BASEURL = "ws://localhost:3001"
 REACT_APP_GOOGLE_AUTH_CLIENT_ID = "686948484381-fulne9eoqb4n39sbtu571qdb3840e5qd.apps.googleusercontent.com"
+PORT=4000
