--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ol": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.10",
     "react-icons": "^4.4.0",
     "react-leaflet": "^4.2.1",
